--- a/charts/external-secrets/templates/cert-controller-service.yaml
+++ b/charts/external-secrets/templates/cert-controller-service.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{.Values.k8sPrefix}}-svc-{{.Values.customer}}-{{.Values.purpose}}-{{ include "external-secrets.fullname" . }}-ccntlr-m-{{.Values.stage}}
+  name: {{.Values.k8sPrefix}}-svc-{{.Values.customer}}-{{.Values.purpose}}-{{ include "external-secrets.fullname" . }}-cc-m-{{.Values.stage}}
   labels:
     {{- include "external-secrets.labels" . | nindent 4 }}
   {{- with .Values.metrics.service.annotations }}
