--- a/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
+++ b/charts/argo-cd/templates/argocd-repo-server/deployment.yaml
@@ -90,7 +90,7 @@ spec:
           - name: ARGOCD_RECONCILIATION_TIMEOUT
             valueFrom:
               configMapKeyRef:
-                name: argocd-cm
+                name: {{.Values.k8sPrefix}}-cm-{{.Values.customer}}-{{.Values.purpose}}-argocd-{{.Values.stage}}
                 key: timeout.reconciliation
                 optional: true
           - name: ARGOCD_REPO_SERVER_LOGFORMAT
