--- a/charts/external-secrets/templates/validatingwebhook.yaml
+++ b/charts/external-secrets/templates/validatingwebhook.yaml
@@ -2,7 +2,7 @@
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: {{.Values.k8sPrefix}}-validatingwebhookconfiguration-{{.Values.customer}}-{{.Values.purpose}}-secretstore-validate-{{.Values.stage}}
+  name: {{.Values.k8sPrefix}}-validatingwebhookconfiguration-{{.Values.customer}}-{{.Values.purpose}}-secretstore-{{.Values.stage}}
   labels:
     external-secrets.io/component: webhook
     {{- with .Values.commonLabels }}
@@ -48,7 +48,7 @@ webhooks:
 apiVersion: admissionregistration.k8s.io/v1
 kind: ValidatingWebhookConfiguration
 metadata:
-  name: {{.Values.k8sPrefix}}-validatingwebhookconfiguration-{{.Values.customer}}-{{.Values.purpose}}-externalsecret-validate-{{.Values.stage}}
+  name: {{.Values.k8sPrefix}}-validatingwebhookconfiguration-{{.Values.customer}}-{{.Values.purpose}}-externalsecret-{{.Values.stage}}
   labels:
     external-secrets.io/component: webhook
     {{- with .Values.commonLabels }}
