--- a/charts/kyverno/values.yaml
+++ b/charts/kyverno/values.yaml
@@ -3,7 +3,7 @@ customer: hydra
 purpose: dataplatform
 stage: dev
 
-# Internal settings used with `helm template` to generate install manifest
+# -- Internal settings used with `helm template` to generate install manifest
 # @ignored
 templating:
   enabled: false
