--- a/charts/external-secrets/values.yaml
+++ b/charts/external-secrets/values.yaml
@@ -3,6 +3,12 @@ customer: hydra
 purpose: dataplatform
 stage: dev
 
+global:
+  nodeSelector: {}
+  tolerations: []
+  topologySpreadConstraints: []
+  affinity: {}
+
 replicaCount: 1
 
 # -- Specifies the amount of historic ReplicaSets k8s should keep (see https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#clean-up-policy)
