--- a/charts/external-secrets/values.yaml
+++ b/charts/external-secrets/values.yaml
@@ -11,7 +11,7 @@ global:
 
 replicaCount: 1
 
-# -- Specifies the amount of historic ReplicaSets k8s should keep (see https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#clean-up-policy)
+# Specifies the amount of historic ReplicaSets k8s should keep (see https://kubernetes.io/docs/concepts/workloads/controllers/deployment/#clean-up-policy)
 revisionHistoryLimit: 10
 
 image:
