Fix deployments labels in tigera-operator

--- a/charts/tigera-operator/templates/tigera-operator/02-tigera-operator.yaml
+++ b/charts/tigera-operator/templates/tigera-operator/02-tigera-operator.yaml
@@ -4,17 +4,24 @@ metadata:
   name: {{.Values.k8sPrefix}}-deploy-{{.Values.customer}}-{{.Values.purpose}}-tigera-operator-{{.Values.stage}}
   namespace: {{.Release.Namespace}}
   labels:
+    app: tigera-operator
+    app.kubernetes.io/name: tigera-operator
     k8s-app: tigera-operator
 spec:
   replicas: 1
   selector:
     matchLabels:
+      app: tigera-operator
+      app.kubernetes.io/name: tigera-operator
+      k8s-app: tigera-operator
       name: {{.Values.k8sPrefix}}-deploy-{{.Values.customer}}-{{.Values.purpose}}-tigera-operator-{{.Values.stage}}
   template:
     metadata:
       labels:
-        name: {{.Values.k8sPrefix}}-deploy-{{.Values.customer}}-{{.Values.purpose}}-tigera-operator-{{.Values.stage}}
+        app: tigera-operator
+        app.kubernetes.io/name: tigera-operator
         k8s-app: tigera-operator
+        name: {{.Values.k8sPrefix}}-deploy-{{.Values.customer}}-{{.Values.purpose}}-tigera-operator-{{.Values.stage}}
         {{- with .Values.podLabels }}
         {{- toYaml . | nindent 8 }}
         {{- end }}
