--- a/charts/kyverno/values.yaml
+++ b/charts/kyverno/values.yaml
@@ -4,6 +4,7 @@ purpose: dataplatform
 stage: dev
 
 # Internal settings used with `helm template` to generate install manifest
+# @ignored
 templating:
   enabled: false
   debug: false
