--- a/charts/kyverno/templates/config/create-pod-antiaffinity-deployment.yaml
+++ b/charts/kyverno/templates/config/create-pod-antiaffinity-deployment.yaml
@@ -1,29 +1,30 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: insert-pod-antiaffinity
+  name: {{.Values.k8sPrefix}}-clusterpolicy-{{.Values.customer}}-{{.Values.purpose}}-pod-antiaffinity-deploy-{{.Values.stage}}
   annotations:
     policies.kyverno.io/title: Add Pod Anti-Affinity
-    policies.kyverno.io/category: Sample
+    policies.kyverno.io/category: Other, EKS Best Practices
     policies.kyverno.io/subject: Deployment, Pod
     policies.kyverno.io/minversion: 1.6.0
     policies.kyverno.io/description: >-
-      Applications may involve multiple replicas of the same Pod for availability as well as scale
-      purposes, yet Kubernetes does not by default provide a solution for availability. This policy
-      sets a Pod anti-affinity configuration on Deployments which contain an `app` label if it is
-      not already present.
+      Applications may involve multiple replicas of the same Pod for
+      availability as well as scale purposes, yet Kubernetes does not by default
+      provide a solution for availability. This policy sets a Pod anti-affinity
+      configuration on Deployments which contain an `app.kubernetes.io/name`
+      label if it is not already present.
 spec:
   rules:
-    - name: insert-pod-antiaffinity
+    - name: insert-pod-antiaffinity-deployment
       match:
         any:
         - resources:
             kinds:
               - Deployment
       preconditions:
-        # This precondition selects Pods with the label `app` defined
+        # This precondition selects Pods with the label `app.kubernetes.io/name` defined
         all:
-        - key: "{{request.object.spec.template.metadata.labels.app || ''}}"
+        - key: "{{request.object.spec.template.metadata.labels.\"app.kubernetes.io/name\" || ''}}"
           operator: NotEquals
           value: ""
       # Mutates the Deployment resource to add fields.
@@ -41,7 +42,7 @@ spec:
                           topologyKey: "topology.kubernetes.io/zone"
                           labelSelector:
                             matchExpressions:
-                            - key: app
+                            - key: app.kubernetes.io/name
                               operator: In
                               values:
-                              - "{{request.object.spec.template.metadata.labels.app}}"
+                              - "{{request.object.spec.template.metadata.labels.\"app.kubernetes.io/name\"}}"
