--- a/charts/kyverno/templates/config/create-pod-antiaffinity-statefulset.yaml
+++ b/charts/kyverno/templates/config/create-pod-antiaffinity-statefulset.yaml
@@ -24,7 +24,7 @@ spec:
       preconditions:
         # This precondition selects Pods with the label `app.kubernetes.io/name` defined
         all:
-        - key: "{{request.object.spec.template.metadata.labels.\"app.kubernetes.io/name\" || ''}}"
+        - key: "`{{request.object.spec.template.metadata.labels.\"app.kubernetes.io/name\" || ''}}`"
           operator: NotEquals
           value: ""
       # Mutates the StatefulSet resource to add fields.
@@ -45,4 +45,4 @@ spec:
                             - key: app.kubernetes.io/name
                               operator: In
                               values:
-                              - "{{request.object.spec.template.metadata.labels.\"app.kubernetes.io/name\"}}"
+                              - "`{{request.object.spec.template.metadata.labels.\"app.kubernetes.io/name\"}}`"
