--- a/charts/kyverno/values.yaml
+++ b/charts/kyverno/values.yaml
@@ -992,7 +992,7 @@ admissionController:
                 operator: In
                 values:
                   - admission-controller
-          topologyKey: kubernetes.io/hostname
+          topologyKey: topology.kubernetes.io/zone
 
   # -- Pod affinity constraints.
   podAffinity: {}
@@ -1401,7 +1401,7 @@ backgroundController:
                 operator: In
                 values:
                   - background-controller
-          topologyKey: kubernetes.io/hostname
+          topologyKey: topology.kubernetes.io/zone
 
   # -- Pod affinity constraints.
   podAffinity: {}
@@ -1708,7 +1708,7 @@ cleanupController:
                 operator: In
                 values:
                   - cleanup-controller
-          topologyKey: kubernetes.io/hostname
+          topologyKey: topology.kubernetes.io/zone
 
   # -- Pod affinity constraints.
   podAffinity: {}
@@ -1986,7 +1986,7 @@ reportsController:
                 operator: In
                 values:
                   - reports-controller
-          topologyKey: kubernetes.io/hostname
+          topologyKey: topology.kubernetes.io/zone
 
   # -- Pod affinity constraints.
   podAffinity: {}
