--- a/charts/kyverno/values.yaml
+++ b/charts/kyverno/values.yaml
@@ -1155,7 +1155,7 @@ admissionController:
 
   metricsService:
     # -- Create service.
-    create: false
+    create: true
     # -- Service port.
     # Kyverno's metrics server will be exposed at this port.
     port: 8000
@@ -1206,7 +1206,7 @@ admissionController:
 
   metering:
     # -- Disable metrics export
-    disabled: true
+    disabled: false
     # -- Otel configuration, can be `prometheus` or `grpc`
     config: prometheus
     # -- Prometheus endpoint port
@@ -1452,7 +1452,7 @@ backgroundController:
 
   metricsService:
     # -- Create service.
-    create: false
+    create: true
     # -- Service port.
     # Metrics server will be exposed at this port.
     port: 8000
@@ -1505,7 +1505,7 @@ backgroundController:
 
   metering:
     # -- Disable metrics export
-    disabled: true
+    disabled: false
     # -- Otel configuration, can be `prometheus` or `grpc`
     config: prometheus
     # -- Prometheus endpoint port
@@ -1758,7 +1758,7 @@ cleanupController:
 
   metricsService:
     # -- Create service.
-    create: false
+    create: true
     # -- Service port.
     # Metrics server will be exposed at this port.
     port: 8000
@@ -1811,7 +1811,7 @@ cleanupController:
 
   metering:
     # -- Disable metrics export
-    disabled: true
+    disabled: false
     # -- Otel configuration, can be `prometheus` or `grpc`
     config: prometheus
     # -- Prometheus endpoint port
@@ -2045,7 +2045,7 @@ reportsController:
 
   metricsService:
     # -- Create service.
-    create: false
+    create: true
     # -- Service port.
     # Metrics server will be exposed at this port.
     port: 8000
@@ -2098,7 +2098,7 @@ reportsController:
 
   metering:
     # -- Disable metrics export
-    disabled: true
+    disabled: false
     # -- Otel configuration, can be `prometheus` or `grpc`
     config: prometheus
     # -- Prometheus endpoint port
