--- a/charts/kyverno-policies/templates/create-pod-antiaffinity-deployment.yaml
+++ b/charts/kyverno-policies/templates/create-pod-antiaffinity-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: kyverno.io/v1
 kind: ClusterPolicy
 metadata:
-  name: {{.Values.k8sPrefix}}-clusterpolicy-{{.Values.customer}}-{{.Values.purpose}}-pod-antiaffinity-deploy-{{.Values.stage}}
+  name: {{.Values.k8sPrefix}}-clusterpolicy-{{.Values.customer}}-{{.Values.purpose}}-pod-antiaff-deploy-{{.Values.stage}}
   annotations:
     policies.kyverno.io/title: Add Pod Anti-Affinity
     policies.kyverno.io/category: Other, EKS Best Practices
