--- a/charts/kyverno/templates/admission-controller/poddisruptionbudget.yaml
+++ b/charts/kyverno/templates/admission-controller/poddisruptionbudget.yaml
@@ -2,7 +2,7 @@
 apiVersion: {{ template "kyverno.pdb.apiVersion" . }}
 kind: PodDisruptionBudget
 metadata:
-  name: {{ template "kyverno.admission-controller.name" . }}
+  name: {{.Values.k8sPrefix}}-pdb-{{.Values.customer}}-{{.Values.purpose}}-{{ template "kyverno.admission-controller.name" . }}-{{.Values.stage}}
   namespace: {{ template "kyverno.namespace" . }}
   labels:
     {{- include "kyverno.admission-controller.labels" . | nindent 4 }}
