--- a/charts/kyverno/templates/admission-controller/service.yaml
+++ b/charts/kyverno/templates/admission-controller/service.yaml
@@ -26,7 +26,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "kyverno.admission-controller.serviceName" . }}-metrics
+  name: {{.Values.k8sPrefix}}-svc-{{.Values.customer}}-{{.Values.purpose}}-{{ template "kyverno.fullname" . | trimSuffix "-" }}-m-{{.Values.stage}}
   namespace: {{ template "kyverno.namespace" . }}
   labels:
     {{- include "kyverno.admission-controller.labels" . | nindent 4 }}
@@ -51,7 +51,7 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "kyverno.admission-controller.serviceName" . }}-profiling
+  name: {{.Values.k8sPrefix}}-svc-{{.Values.customer}}-{{.Values.purpose}}-{{ template "kyverno.fullname" . | trimSuffix "-" }}-p-{{.Values.stage}}
   namespace: {{ template "kyverno.namespace" . }}
   labels:
     {{- include "kyverno.admission-controller.labels" . | nindent 4 }}
