--- a/charts/kyverno/templates/background-controller/clusterrole.yaml
+++ b/charts/kyverno/templates/background-controller/clusterrole.yaml
@@ -72,7 +72,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "kyverno.background-controller.roleName" $ }}:additional
+  name: {{ template "kyverno.background-controller.roleName" $ }}:extra
   labels:
     {{- include "kyverno.background-controller.labels" $ | nindent 4 }}
 rules:
