--- a/charts/kyverno/templates/hooks/post-upgrade-clean-reports.yaml
+++ b/charts/kyverno/templates/hooks/post-upgrade-clean-reports.yaml
@@ -3,7 +3,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: {{ template "kyverno.fullname" . }}-clean-reports
+  name: {{.Values.k8sPrefix}}-job-{{.Values.customer}}-{{.Values.purpose}}-{{ template "kyverno.fullname" . }}-clean-reports-{{.Values.stage}}
   namespace: {{ template "kyverno.namespace" . }}
   labels:
     {{- include "kyverno.hooks.labels" . | nindent 4 }}
