--- a/charts/kyverno/templates/reports-controller/clusterrole.yaml
+++ b/charts/kyverno/templates/reports-controller/clusterrole.yaml
@@ -101,7 +101,7 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: {{ template "kyverno.reports-controller.roleName" $ }}:additional
+  name: {{ template "kyverno.reports-controller.roleName" $ }}:extra
   labels:
     {{- include "kyverno.reports-controller.labels" $ | nindent 4 }}
 rules:
