--- a/charts/kyverno/templates/background-controller/clusterrolebinding.yaml
+++ b/charts/kyverno/templates/background-controller/clusterrolebinding.yaml
@@ -3,13 +3,13 @@
 kind: ClusterRoleBinding
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
-  name: {{ template "kyverno.background-controller.roleName" . }}
+  name: {{.Values.k8sPrefix}}-clusterrolebinding-{{.Values.customer}}-{{.Values.purpose}}-{{ template "kyverno.background-controller.name" . }}-{{.Values.stage}}
   labels:
     {{- include "kyverno.background-controller.labels" . | nindent 4 }}
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: {{ template "kyverno.background-controller.roleName" . }}
+  name: {{.Values.k8sPrefix}}-clusterrole-{{.Values.customer}}-{{.Values.purpose}}-{{ template "kyverno.background-controller.name" . }}-{{.Values.stage}}
 subjects:
 - kind: ServiceAccount
   name: {{ template "kyverno.background-controller.serviceAccountName" . }}
